k8s/k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tuomaksena
  namespace: tuomaksena
  labels:
    app: tuomaksena
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: tuomaksena
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tuomaksena
  namespace: tuomaksena
  labels:
    app: tuomaksena
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tuomaksena
  template:
    metadata:
      labels:
        app: tuomaksena
    spec:
      containers:
      - name: tuomaksena
        image: ghcr.io/dilaz/tuomaksena:latest
        imagePullPolicy: IfNotPresent
      imagePullSecret:
      - name: github-container-registry
