k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tuomaksena
  namespace: tuomaksena
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: tuomaksena.binarydream.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tuomaksena
                port:
                  number: 80
  tls:
    - secretName: tuomaksena-tls
      hosts:
        - tuomaksena.binarydream.fi
